@@ -18,16 +18,32 @@ repositories {
 
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(17)
+    languageVersion = JavaLanguageVersion.of(19)
   }
 }
 
 test {
   useJUnitPlatform()
+  
+  jvmArgs(['--enable-preview'])
 }
 
 javadoc.options {
-  addStringOption('-release', '17')
+  addStringOption('-release', '19')
+}
+
+compileJava {
+  options.compilerArgs << '-Xlint:unchecked'
+  options.compilerArgs << '-Xlint:rawtypes'
+  options.compilerArgs << '--enable-preview'
+  options.release = 19
+}
+
+compileTestJava {
+  options.compilerArgs << '-Xlint:unchecked'
+  options.compilerArgs << '-Xlint:rawtypes'
+  options.compilerArgs << '--enable-preview'
+  options.release = 19
 }
 
 dependencies {
@@ -36,15 +52,15 @@ dependencies {
   implementation 'com.github.tonivade:purefun-effect:4.0'
   implementation 'com.github.tonivade:purefun-transformer:4.0'
   runtimeOnly 'com.github.tonivade:purefun-instances:4.0'
-  implementation 'com.github.tonivade:zeromock-server:0.16.0'
+  implementation 'com.github.tonivade:zeromock-server:0.17.0-SNAPSHOT'
   implementation 'com.github.tonivade:puredbc:0.4'
   implementation 'com.github.tonivade:purecfg:0.4'
   implementation 'com.github.tonivade:purejson:0.3'
   implementation 'com.zaxxer:HikariCP:5.0.1'
   runtimeOnly 'com.h2database:h2:2.1.214'
   runtimeOnly 'ch.qos.logback:logback-classic:1.2.11'
-  testImplementation 'com.github.tonivade:zeromock-junit5:0.16.0'
-  testImplementation 'com.github.tonivade:zeromock-client:0.16.0'
+  testImplementation 'com.github.tonivade:zeromock-junit5:0.17.0-SNAPSHOT'
+  testImplementation 'com.github.tonivade:zeromock-client:0.17.0-SNAPSHOT'
   testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
   testRuntimeOnly 'org.junit.platform:junit-platform-runner:1.9.1'
   testImplementation 'org.mockito:mockito-core:4.8.0'
